# obo-playground

./: .gitignore  EVENT_DRIVEN_SYSTEM_EXPLANATION.md  global.d.ts  next.config.mjs  package-lock.json  package.json  test-rotation-fix.html
app/: globals.css  layout.tsx  page.tsx
app/ammo-test/: page.tsx
app/debug/: page.tsx
app/embedded/: page.tsx
app/pyodide-demo/: page.tsx
app/python/: page.tsx
app/python-debug/: page.tsx
components/: challenge-panel.tsx  check-syntax.js  code-editor.tsx  embedded-obo-car-test.tsx  enhanced-obo-car-scene.tsx  enhanced-simulation-controls.tsx  metrics-dashboard.tsx  obo-car-scene.tsx  obo-car-simulator.tsx  obocar-pyodide-component.tsx  obocar-pyodide.tsx  pyodide-debug-test.tsx  session-manager.tsx  simple-obo-car-test.tsx  simulation-controls.tsx  terminal-panel.tsx
hooks/: use-car-animation.ts  use-command-executor.ts
lib/: car-control-system.ts  event-bus.ts  obo-car-bridge.ts  obocar-pyodide.ts  obocar-pyodide.ts.bak  pyodide-car-controller.js  pyodide-integration.js  python-bridge-backup.ts  python-bridge.ts  session-manager.ts  simulation-store.ts  simulation-store.ts.bak  types.ts  webgpu-utils.ts
obo-playground -backend/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
obo-playground-backend/: .env.example  README.md  package-lock.json  package.json
obo-playground-frontend/: next.config.ts  package-lock.json  package.json
public/: Obo-Car-Fbx.fbx  obocar-pyodide-demo.html  obocar.py  rotation-test.html  runtime-fixes.js  square_test.py  sync_test.py  test-pyodide.html
python-lib/: README.md  pyproject.toml
python-lib/examples/: advanced_simulation.py  basic_simulation.py  pyodide_integration.py
python-lib/obocar/: __init__.py  vehicle.py
python-lib/tests/: test_obocar.py
(+149 files in other folders)
